tests/snapshots/examples_fixtures/type_system__failing__127_match_missing_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/type_system/failing/127_match_missing_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `->` in match arm, found `INT`. Match arms must use `->`.

  --> examples/type_system/failing/127_match_missing_arrow.flx:2:7
  |
2 |     0 1,
  |       ^

Hint:
  Write match arms as `match x { pattern -> body, ... }`.
== stdout ==
<not executed>
